--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ali.ge - For Sale</title>
+    <meta name="description" content="Acquire this premium domain to elevate your online presence effortlessly. Contact us for more details!">
+    <title>sam.ge - For Sale</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
+        <!-- کانتینر اصلی -->
         <div class="container">
+            <!-- متن سمت چپ -->
             <div class="left">
-                <h1>ali.ge is For Sale!</h1>
-                <p>Own this exceptional domain and elevate your online presence to the next level.</p>
+                <h1>sam.ge is For Sale!</h1>
+                <p>Acquire this premium domain to elevate your online presence effortlessly.</p>
                 <p>Fill out the form, and we’ll respond promptly with more details.</p>
             </div>
+            
+            <!-- فرم سمت راست -->
             <div class="right">
                 <h2>Free Domain Name Inquiry</h2>
                 <form id="domainInquiryForm">
                     <input type="text" id="name" placeholder="Your name (required)" required autocomplete="name">
                     <input type="email" id="email" placeholder="Your email address (required)" required autocomplete="email">
                     <input type="number" id="offer" placeholder="Your offer in USD (optional)" autocomplete="off">
-                    <input type="number" id="antiSpamAnswer" placeholder="Security Question: Loading..." required autocomplete="off">
+                    <input type="number" id="antiSpamAnswer" placeholder="Solve the security question below:" required autocomplete="off">
                     <button type="submit">Submit</button>
                 </form>
-                <p id="responseMessage" style="display: none; color: green;">Your form has been successfully submitted!</p>
+                <!-- پیام پاسخ -->
+                <div id="responseContainer" style="display: none;">
+                    <p id="responseMessage" style="color: green; margin-top: 10px;"></p>
+                </div>
             </div>
         </div>
-
-        <!-- Footer -->
-        <footer>
-            <p>© 2024 SAM Group. Ver. 1.4.1</p>
-        </footer>
     </div>
+
+    <!-- فوتر -->
+    <footer>
+        <p>© 2024 SAM Group</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
