--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Acquire this premium domain to elevate your online presence effortlessly. Contact us for more details!">
-    <title>sam.ge - For Sale</title>
+    <title>ali.ge - For Sale</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="container">
             <div class="left">
-                <h1>sam.ge is For Sale!</h1>
+                <h1>ali.ge is For Sale!</h1>
                 <p>Acquire this premium domain to elevate your online presence effortlessly.</p>
                 <p>Fill out the form, and we’ll respond promptly with more details.</p>
             </div>
